tests/sksl/errors/InvalidOutParams.glsl
### Compilation failed:

error: 4: cannot assign to this expression
error: 5: cannot assign to this expression
error: 6: cannot assign to this expression
3 errors
